add fine-print footer

--- a/src/client/pages/results.html
+++ b/src/client/pages/results.html
@@ -2,27 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>View Your Race Progress</title>
-    <link rel="stylesheet" href="assets/stylesheets/reset.css">
-    <link rel="stylesheet" href="assets/stylesheets/index.css">
-    <script src="/assets/javascript/index.js" charset="utf-8"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>View Your Race Progress</title>
+	<link rel="stylesheet" href="assets/stylesheets/reset.css">
+	<link rel="stylesheet" href="assets/stylesheets/index.css">
+	<script src="/assets/javascript/index.js" charset="utf-8"></script>
 </head>
 
 <body>
-    <header>
-        <h1>Race Results</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Race Progress</h2>
-            <div>
+	<header>
+		<h1>Race Results</h1>
+	</header>
+	<main>
+		<section>
+			<h2>Race Progress</h2>
+			<div>
 
-            </div>
-        </section>
-    </main>
-    <footer></footer>
+			</div>
+		</section>
+	</main>
+	<footer>
+		<p class="fine-print">Image:&nbsp
+			<a
+				href="https://commons.wikimedia.org/wiki/File:Banco_de_peces_trompeta_(Macroramphosus_scolopax),_islas_Azores,_Portugal,_2020-07-27,_DD_40.jpg">
+				Diego Delso</a>,&nbsp<a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>,&nbsp via
+			Wikimedia Commons
+		</p>
+	</footer>
 </body>
+
 </html>
