--- a/src/client/pages/home.html
+++ b/src/client/pages/home.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Welcome to the Pod Racer Simulator</title>
-    <link rel="stylesheet" href="assets/stylesheets/reset.css">
-    <link rel="stylesheet" href="assets/stylesheets/index.css">
-    <link rel="stylesheet" href="assets/stylesheets/home.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Sub Racing Simulator</title>
+	<link rel="stylesheet" href="assets/stylesheets/reset.css">
+	<link rel="stylesheet" href="assets/stylesheets/index.css">
+	<link rel="stylesheet" href="assets/stylesheets/home.css">
 </head>
 
 <body>
-    <header>
-        <h1>Welcome to Pod Racer Sim</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Become a Pod Racer Champion</h2>
-            <h3>Start your sim now with just two simple questions</h3>
-            <a class="button" href="/race">Start My Race</a>
-        </section>
-    </main>
-    <footer></footer>
+	<header>
+		<h1>Sub Racing Simulation</h1>
+	</header>
+	<main>
+		<section>
+			<h2>Become a submarine pod racing 🏁 Champion</h2>
+			<h3>Start your simulation now with just two simple questions</h3>
+			<a class="button" href="/race">Start My Race</a>
+		</section>
+	</main>
+	<footer>
+		<p class="fine-print">Image:&nbsp
+			<a
+				href="https://commons.wikimedia.org/wiki/File:Banco_de_peces_trompeta_(Macroramphosus_scolopax),_islas_Azores,_Portugal,_2020-07-27,_DD_40.jpg">
+				Diego Delso</a>,&nbsp<a href="https://creativecommons.org/licenses/by-sa/4.0">CC BY-SA 4.0</a>,&nbsp via
+			Wikimedia Commons
+		</p>
+	</footer>
 </body>
+
 </html>
